unpackaged/main/default/objects/fferpcore__CompanyTaxInformation__c/fferpcore__CompanyTaxInformation__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__CompanyTaxInformationHelp</customHelpPage>
    <description>Contains the tax information for a company.</description>
    <label>Company Tax Information</label>
    <nameField>
        <label>Company Tax Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Tax Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>