unpackaged/main/default/objects/fferpcore__CompanyTaxInformation__c/fields/fferpcore__TaxEngine__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxEngine__c</fullName>
    <description>The tax engine used by default for billing documents from this company, unless a different tax engine is selected when calculating tax.</description>
    <inlineHelpText>The tax engine used by default for billing documents from this company, unless a different tax engine is selected when calculating tax.</inlineHelpText>
    <label>Default Tax Engine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Avalara AvaTax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>