unpackaged/main/default/objects/fferpcore__CompanyTaxInformation__c/fields/fferpcore__VatGstGroup__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__VatGstGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this company is part of a VAT/GST group. The value of this checkbox is used when deciding where to get the default tax code to use.</description>
    <inlineHelpText>Indicates whether this company is part of a VAT/GST group. The value of this checkbox is used when deciding where to get the default tax code to use.</inlineHelpText>
    <label>VAT/GST Group</label>
    <type>Checkbox</type>
</CustomField>